--- a/_sass/prompt-modify.scss
+++ b/_sass/prompt-modify.scss
@@ -35,3 +35,8 @@
   border-left: 4px solid #006400;
   background-color: rgba(0,100,0,0.1);
 }
+
+.prompt-FireBrick {
+  border-left: 4px solid #B22222;
+  background-color: rgba(178,34,34,0.1);
+}
