--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,12 +100,12 @@ layout: compress
       processEscapes: true,
       "HTML-CSS": {
         fonts: ["TeX"],
-        linebreaks: { automatic: true }, // 自动换行
-        mtextFontInherit: true, // 继承正文字体
+<!--         linebreaks: { automatic: true }, // 自动换行
+        mtextFontInherit: true, // 继承正文字体 -->
         styles: {
           ".MathJax": {
-            margin: "0 0.2em", // 左右间距
-            padding: "0.1em 0" // 上下间距
+            margin: "0 0.2em",
+            padding: "0.1em 0"
           }
         }
       }
