--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@ layout: compress
         mtextFontInherit: true, // 继承正文字体 -->
         styles: {
           ".MathJax": {
-            margin: "0 0.2em",
+            margin: "0.4em 0.4em",
             padding: "0.1em 0"
           }
         }
