--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,11 +100,11 @@ layout: compress
       processEscapes: true,
       "HTML-CSS": {
         fonts: ["TeX"],
-<!--         linebreaks: { automatic: true }, // 自动换行
-        mtextFontInherit: true, // 继承正文字体 -->
+        linebreaks: { automatic: true },
+        mtextFontInherit: true,
         styles: {
           ".MathJax": {
-            margin: "4em 4em",
+            margin: "0.4em 0.4em",
             padding: "0.1em 0"
           }
         }
