--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,47 @@ layout: compress
 <html lang="{{ page.lang | default: site.alt_lang | default: site.lang }}" {{ prefer_mode }}>
   {% include head.html %}
 
+  <head>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+          TeX: {
+            equationNumbers: {
+              autoNumber: "AMS"
+            }
+          },
+          extensions: ["tex2jax.js"],
+          jax: ["input/TeX", "output/HTML-CSS"],
+          tex2jax: {
+          inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+          displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+          processEscapes: true,
+          "HTML-CSS": {
+            fonts: ["TeX"],
+            linebreaks: { automatic: true },
+            mtextFontInherit: true,
+            styles: {
+              ".MathJax": {
+                margin: "0.4em 0.4em",
+                padding: "0.1em 0"
+              }
+            }
+          }
+        }
+      });
+      MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
+            alert("Math Processing Error: "+message[1]);
+          });
+      MathJax.Hub.Register.MessageHook("TeX Jax - parse error",function (message) {
+            alert("Math Processing Error: "+message[1]);
+          });
+    </script>
+    <script
+      type="text/javascript"
+      async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
+    ></script>
+  </head>
+
   <body>
     {% include sidebar.html lang=lang %}
 
@@ -84,42 +125,3 @@ layout: compress
     {% include_cached search-loader.html lang=lang %}
   </body>
 </html>
-
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-      TeX: {
-        equationNumbers: {
-          autoNumber: "AMS"
-        }
-      },
-      extensions: ["tex2jax.js"],
-      jax: ["input/TeX", "output/HTML-CSS"],
-      tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-      processEscapes: true,
-      "HTML-CSS": {
-        fonts: ["TeX"],
-        linebreaks: { automatic: true },
-        mtextFontInherit: true,
-        styles: {
-          ".MathJax": {
-            margin: "0.4em 0.4em",
-            padding: "0.1em 0"
-          }
-        }
-      }
-    }
-  });
-  MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
-        alert("Math Processing Error: "+message[1]);
-      });
-  MathJax.Hub.Register.MessageHook("TeX Jax - parse error",function (message) {
-        alert("Math Processing Error: "+message[1]);
-      });
-</script>
-<script
-  type="text/javascript"
-  async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
-></script>
