--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,15 +31,15 @@ layout: compress
           displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
           processEscapes: true,
           "HTML-CSS": {
-            fonts: ["TeX"],
-            linebreaks: { automatic: true },
+            fonts: ["TeX"]
+<!--             linebreaks: { automatic: true },
             mtextFontInherit: true,
             styles: {
               ".MathJax": {
                 margin: "0.4em 0.4em",
                 padding: "0.1em 0"
               }
-            }
+            } -->
           }
         }
       });
