--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,47 +15,7 @@ layout: compress
 <!-- `site.alt_lang` can specify a language different from the UI -->
 <html lang="{{ page.lang | default: site.alt_lang | default: site.lang }}" {{ prefer_mode }}>
   {% include head.html %}
-
-  <head>
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-          TeX: {
-            equationNumbers: {
-              autoNumber: "AMS"
-            }
-          },
-          extensions: ["tex2jax.js"],
-          jax: ["input/TeX", "output/HTML-CSS"],
-          tex2jax: {
-          inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-          displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-          processEscapes: true,
-          "HTML-CSS": {
-            fonts: ["TeX"]
-<!--             linebreaks: { automatic: true },
-            mtextFontInherit: true,
-            styles: {
-              ".MathJax": {
-                margin: "0.4em 0.4em",
-                padding: "0.1em 0"
-              }
-            } -->
-          }
-        }
-      });
-      MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
-            alert("Math Processing Error: "+message[1]);
-          });
-      MathJax.Hub.Register.MessageHook("TeX Jax - parse error",function (message) {
-            alert("Math Processing Error: "+message[1]);
-          });
-    </script>
-    <script
-      type="text/javascript"
-      async
-      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
-    ></script>
-  </head>
+  {% include mathjax_support.html %}
 
   <body>
     {% include sidebar.html lang=lang %}
